fix moves